@@ -1,10 +1,13 @@
 Changelog for GEMC
 ==================
 
-11/15/2016
+11/18/16
+ - added option SKIPNGEN to skip N generated events
+
+11/15/16
  - added CLAS12 CND, FMT, BST, HTCC, LTCC, RICH, FTCAL, FTHODO constants and database reading
 
-11/7/2-16
+11/7/16
  - new bonus hit process
 
 10/25/16
